# tradility

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  secret-scan.yml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: repo-architecture.drawio  repo-architecture.puml
src/tradility/: __init__.py  __main__.py  analyze.py  cli.py  fetch.py  indicators.py
tests/: test_indicators.py
